using a different way of authenticating

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,7 @@ jobs:
    steps:
      - checkout
      # login
-     - run: |
-         echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+     - run: docker login --username $DOCKER_USER --password '$DOCKER_PASS'
 
      # build the application image
      - run: docker build -t tteoh/kasm-qgis:$CIRCLE_BRANCH .
