replace pass with token

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag tteoh/kasm-qgis:$(date +%s)
     - name: Login to Docker
-      run: echo {{ secrets.DOCKER_PASS }} | docker login --username {{ secrets.DOCKER_USER }} --password-stdin
+      run: echo {{ secrets.DOCKER_TOKEN }} | docker login --username {{ secrets.DOCKER_USER }} --password-stdin
     - name: Publish Docker image
       run: docker push tteoh/kasm-qgis:$(date +%s)
